--- a/index.html
+++ b/index.html
@@ -7,56 +7,206 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
+  <header id="topo">
     <h1>O Sistema Solar</h1>
   </header>
   <main>
     <section id="introducao">
       <h2>Introdução</h2>
-      <p>O Sistema Solar é formado pelo Sol e todos os corpos celestes que orbitam ao seu redor, como planetas, luas, asteroides e cometas.</p>
+      <p> O Sistema Solar é composto pelo Sol e por todos os corpos celestes que orbitam o seu domínio gravitacional, como os oito planetas (Mercúrio, Vénus, Terra, Marte, Júpiter, Saturno, Urano e Neptuno), cinco planetas anões, satélites naturais, asteróides e cometas. Formado há cerca de 4,6 mil milhões de anos, o Sistema Solar está localizado na Via Láctea e é regido pela gravidade do Sol, a estrela que concentra a maior parte da sua massa e fornece a energia essencial para a vida na Terra. 
+      </p>
     </section>
 
     <section id="planetas">
       <h2>Planetas</h2>
       <div class="grid-planetas">
         <div class="planeta">
+            <a href="#mercurio">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/18_mercury_new.png" alt="Mercúrio">
           <p>Mercúrio</p>
+        </a>
         </div>
         <div class="planeta">
+            <a href="#venus">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/27_venus_jg.png" alt="Vênus">
           <p>Vênus</p>
+        </a>
         </div>
-        <div class="planeta">
+        <div class="planeta"><a href="#terra">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/17_earth.png" alt="Terra">
           <p>Terra</p>
+        </a>
         </div>
         <div class="planeta">
+        <a href="#marte">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/19_mars.png" alt="Marte">
           <p>Marte</p>
+        </a>
         </div>
         <div class="planeta">
+            <a href="#jupiter">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png" alt="Júpiter">
           <p>Júpiter</p>
+          </a>
         </div>
         <div class="planeta">
+            <a href="#saturno">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/28_saturn.png" alt="Saturno">
           <p>Saturno</p>
+          </a>
         </div>
         <div class="planeta">
+            <a href="#urano">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/29_uranus.png" alt="Urano">
           <p>Urano</p>
+          </a>
         </div>
         <div class="planeta">
+            <a href="#netuno">
           <img src="https://solarsystem.nasa.gov/system/feature_items/images/30_neptune.png" alt="Netuno">
           <p>Netuno</p>
+            </a>
         </div>
       </div>
     </section>
 
+    <!--Seções individuais sobre os planetas-->
+    <section id="mercurio">
+  <h2>Mercúrio</h2>
+  <p>Mercúrio é o planeta mais próximo do Sol e também o menor do Sistema Solar. 
+     Por estar tão perto da nossa estrela, sua superfície pode atingir temperaturas 
+     superiores a 400 °C durante o dia, enquanto à noite despenca para quase -180 °C. 
+     Ele não possui atmosfera significativa, o que faz com que não consiga reter calor.</p>
+  <p>É um planeta rochoso, cheio de crateras formadas por impactos de meteoros, 
+     lembrando bastante a superfície da Lua. Seu ano é extremamente curto, 
+     levando apenas 88 dias para dar uma volta completa ao redor do Sol. 
+     Já o seu dia é muito longo: leva cerca de 59 dias terrestres para completar uma rotação.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+
+<section id="venus">
+  <h2>Vênus</h2>
+  <p>Vênus é conhecido como o "planeta irmão da Terra" por ter tamanho e composição semelhantes. 
+     No entanto, sua atmosfera densa e composta majoritariamente de dióxido de carbono causa um 
+     forte efeito estufa, tornando-o o planeta mais quente do Sistema Solar, com temperaturas 
+     médias de 465 °C, capazes de derreter chumbo.</p>
+  <p>A atmosfera de Vênus também é coberta por nuvens espessas de ácido sulfúrico, 
+     o que dificulta a observação de sua superfície. 
+     Curiosamente, seu movimento de rotação é muito lento e no sentido contrário ao da Terra. 
+     Isso faz com que um dia em Vênus seja mais longo que um ano em Vênus.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+    <section id="terra">
+  <h2>Terra</h2>
+  <p>A Terra é o terceiro planeta a partir do Sol e o único conhecido até hoje 
+     a abrigar vida. Sua superfície é composta em cerca de 70% por água, e 
+     sua atmosfera rica em oxigênio possibilita a existência de organismos vivos 
+     complexos. O campo magnético terrestre também desempenha um papel fundamental 
+     na proteção contra radiações solares nocivas.</p>
+  <p>Nosso planeta possui um ciclo de rotação de aproximadamente 24 horas, 
+     o que gera os dias e noites, e uma translação de cerca de 365 dias, 
+     que define o ano. Além disso, a Terra possui apenas um satélite natural: a Lua, 
+     que influencia diretamente as marés e estabiliza a inclinação do planeta.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+
+    <section id="marte">
+  <h2>Marte</h2>
+  <p>Marte é conhecido como o "planeta vermelho" devido à presença de óxido de ferro em sua superfície. 
+     É um planeta frio e desértico, mas que desperta grande interesse científico por apresentar sinais 
+     de que já teve água líquida em seu passado. Atualmente, existem calotas polares de gelo de água e CO₂.</p>
+  <p>Um dia em Marte dura 24 horas e 37 minutos, bem parecido com o da Terra. 
+     Porém, seu ano é quase o dobro do terrestre, levando 687 dias para completar uma volta em torno do Sol. 
+     O planeta possui duas pequenas luas: Fobos e Deimos.</p>
+  <p>Marte é um dos principais alvos de exploração espacial. Diversas sondas e robôs, 
+     como o rover Perseverance da NASA, já estudam sua superfície em busca de sinais de vida microbiana.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+
+<section id="jupiter">
+  <h2>Júpiter</h2>
+  <p>Júpiter é o maior planeta do Sistema Solar, sendo um gigante gasoso composto 
+     principalmente de hidrogênio e hélio. Sua massa é tão grande que poderia 
+     abrigar todos os outros planetas em seu interior. Uma das características 
+     mais marcantes de Júpiter é a Grande Mancha Vermelha, uma gigantesca tempestade 
+     que existe há séculos.</p>
+  <p>O planeta possui um sistema impressionante de mais de 90 luas conhecidas, 
+     sendo as quatro maiores chamadas de "luas galileanas": Io, Europa, Ganimedes e Calisto. 
+     Ganimedes, por exemplo, é maior que o planeta Mercúrio.</p>
+  <p>Seu campo magnético é o mais forte do Sistema Solar e influencia todo o espaço ao redor. 
+     Um dia em Júpiter dura apenas 10 horas, mas seu ano equivale a quase 12 anos terrestres.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+    <section id="saturno">
+  <h2>Saturno</h2>
+  <p>Saturno é o segundo maior planeta do Sistema Solar e é famoso por seus impressionantes anéis, 
+     compostos por gelo, poeira e pequenas rochas. Assim como Júpiter, é um gigante gasoso formado 
+     principalmente por hidrogênio e hélio.</p>
+  <p>Possui mais de 80 luas conhecidas, sendo Titã a maior e uma das mais interessantes, 
+     pois tem atmosfera densa e lagos de metano líquido em sua superfície. 
+     Isso faz de Titã um alvo de grande interesse para futuras missões espaciais.</p>
+  <p>Saturno leva cerca de 29 anos para completar uma órbita em torno do Sol. 
+     Apesar de seu tamanho gigantesco, sua densidade é tão baixa que, teoricamente, 
+     ele flutuaria em uma piscina gigante de água.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+    <section id="urano">
+  <h2>Urano</h2>
+  <p>Urano é um planeta gigante de gelo, composto por hidrogênio, hélio e grandes quantidades 
+     de água, amônia e metano. Esse metano presente em sua atmosfera é responsável pela 
+     coloração azulada do planeta.</p>
+  <p>Uma de suas características mais curiosas é sua inclinação axial de cerca de 98°, 
+     o que faz com que ele gire praticamente "de lado". Isso gera estações extremamente longas, 
+     onde um polo pode ficar voltado para o Sol por 42 anos seguidos.</p>
+  <p>Urano tem 27 luas conhecidas e leva aproximadamente 84 anos para completar uma volta ao redor do Sol. 
+     Seu dia, no entanto, é curto, durando cerca de 17 horas terrestres.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+
+    <section id="netuno">
+  <h2>Netuno</h2>
+  <p>Netuno é o planeta mais distante do Sol e também um gigante de gelo, 
+     parecido com Urano em sua composição. É conhecido por sua intensa cor azul, 
+     resultado da presença de metano em sua atmosfera.</p>
+  <p>O planeta possui os ventos mais fortes do Sistema Solar, com rajadas que 
+     podem ultrapassar 2.000 km/h. Sua atmosfera é formada principalmente por hidrogênio, hélio e metano.</p>
+  <p>Netuno possui 14 luas conhecidas, sendo Tritão a maior delas. Curiosamente, 
+     Tritão orbita em sentido contrário à rotação do planeta, o que sugere que 
+     pode ter sido capturada da região do Cinturão de Kuiper.</p>
+  <p>Seu ano é muito longo, levando cerca de 165 anos terrestres para completar uma órbita ao redor do Sol.</p>
+  <p><a href="#topo" class="btn-voltar">⬆ Voltar ao topo</a></p>
+</section>
+
+
     <section id="curiosidades">
       <h2>Curiosidades</h2>
       <p>Você sabia que um dia em Vênus é mais longo que um ano em Vênus? E que Júpiter tem pelo menos 79 luas conhecidas?</p>
+    <p> O Sol representa 99,8% da massa do Sistema Solar – todos os planetas, luas, asteroides e cometas juntos não chegam nem a 0,2% da massa total.</p>
+
+<p> Existem mais de 200 luas conhecidas orbitando os planetas. Só Júpiter e Saturno juntos têm mais de 150!</p>
+
+<p> Saturno poderia flutuar na água – sua densidade é menor do que a da água, embora isso seja apenas teórico (não existe um oceano tão grande assim).</p>
+
+<p> O maior vulcão conhecido está em Marte – o Monte Olimpo tem cerca de 22 km de altura, quase três vezes o Everest.
+
+<p> Os cometas são como "relíquias congeladas" – eles preservam material da formação do Sistema Solar, há mais de 4,5 bilhões de anos.</p>
+
+<p> Ventos solares viajam a mais de 1 milhão de km/h – essas partículas carregadas do Sol influenciam o clima espacial e causam auroras na Terra.</p>
+
+<p> Plutão tem 5 luas conhecidas – a maior, Caronte, é tão grande que, juntos, eles formam um sistema duplo (quase dois planetas dançando em torno um do outro).</p>
+
+<p> Netuno tem os ventos mais rápidos do Sistema Solar – já medidos em mais de 2.000 km/h.</p>
+
+<p> A Lua da Terra está se afastando de nós – cerca de 3,8 cm por ano. Isso significa que, daqui a milhões de anos, os eclipses solares não existirão da forma que conhecemos.</p>
+
+<p> Ainda podem existir planetas não descobertos – alguns cientistas acreditam que pode haver um "Planeta 9", muito além de Netuno, influenciando órbitas de objetos distantes.</p>
     </section>
   </main>
 
